Adding comment about GPUs

--- a/write-up/main.tex
+++ b/write-up/main.tex
@@ -84,5 +84,6 @@ Concrete next steps that would make this study stronger:
 \paragraph{True sparsity} at present, we store all values with no implied 0s, this is inefficient and increases the effect of the delay for sparse matrices.
 \paragraph{Larger n} test larger $n$ until we reach the limits of memory so that we must use disk storage, I hypothesize that this would further favour the SQL approach.
 \paragraph{Find the boundary} We do not know exactly where the boundary is between SQL or Python being faster as we vary sparsity.
+\paragraph{Use GPU} Compare other libraries including those that enable GPU acceleration such as PyTorch
 
 \end{document}
